hphp/hack/test/typecheck/legacy/suspend_operator_err10.php.exp
File "suspend_operator_err10.php", line 5, characters 8-29:
Coroutine calls are only allowed when they are arguments to 'suspend' operator (Typing[4171])
