hphp/hack/test/typecheck/legacy/suspend_operator_err10.php
<?hh // strict

function f(): int {
  // not ok - call to coroutine outside the suspend
  $a = (coroutine () ==> 1)();
  return 1;
}
